HUE-6639 [assist] Fix issue where drop-downs are hidden behind flex panels in Hue 3
(cherry picked from commit ddb6089d95b88b1fadc16ef8f51e94e32e02718f)

--- a/desktop/core/src/desktop/static/desktop/less/hue-cross-version.less
+++ b/desktop/core/src/desktop/static/desktop/less/hue-cross-version.less
@@ -405,6 +405,14 @@ ul.errorlist {
 .hue-drop-down-container {
   position: fixed;
   z-index: 900;
+
+  &.open {
+    position: absolute;
+  }
+
+  &.hue-drop-down-fixed {
+    position: fixed !important;
+  }
 }
 
 .hue-drop-down-active span {
